# softgnn-advisor

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  requirements.txt  softgnn.py
.github/workflows/: tests.yml
config/: settings.py
core/: change_provider.py  developer_aliases.py  impact_engine.py  llm_provider.py  llm_test_schema.py  plan_cache.py  pr_scanner.py  test_generation_agent.py
core/ai/: gnn_architecture.py  predicter.py
docs/: future-milestones.md  quickstart.md
docs/examples/: social-link-demo.md
infrastructure/pipelines/: contract_extractor.py  feature_encoder.py  git_parser.py  runtime_coverage_mapper.py
infrastructure/repositories/: __init__.py  feature_repo.py  graph_repo.py  model_repo.py
scripts/: etl_run.py  train_model.py
softgnn_advisor/: __init__.py  __main__.py  cli.py
softgnn_advisor/config/: settings.py
softgnn_advisor/core/: change_provider.py  dashboard_assets.py  dashboard_server.py  file_filters.py  graph_exporter.py  impact_engine.py  interfaces.py  metadata_utils.py  plan_cache.py  pr_scanner.py  report_renderer.py  scan_cache.py  scan_fallback.py  test_generation_agent.py
softgnn_advisor/core/ai/: __init__.py  predicter.py
softgnn_advisor/infrastructure/pipelines/: __init__.py  ast_parser.py  feature_encoder.py  git_parser.py  runtime_coverage_mapper.py  test_parser.py
softgnn_advisor/infrastructure/repositories/: feature_repo.py  graph_repo.py  model_repo.py
softgnn_advisor/scripts/: etl_run.py  train_model.py
tests/: test_block_rollback.py  test_change_provider.py  test_dashboard_server.py  test_graph_exporter.py  test_llm_provider.py  test_llm_test_schema.py  test_plan_cache.py  test_report_renderer.py  test_scan_fallback.py
